Added baseurl to absolute urls. Attention with escaparate.svg

--- a/_posts/2018-01-02-de11a21.html
+++ b/_posts/2018-01-02-de11a21.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: de 11 a 21. CAAC
-image_path: "/projects/de11a21"
-footer: '<strong>CAAC, Centro Andaluz de Arte Contemporáneo</strong>&nbsp; 2011&nbsp; <h6>n.0</h6> / <a href="/projects/de11a21-n1">n.1</a> /<a href="/projects/de11a21-n2">n.2</a><br><strong><em>de 11 to 21.</em></strong> Issue 0. On the position of the spectator in contemporary visual culture<br />Magazine, 112 pages, 19,5x25 cm'
+image_path: "{{ site.baseurl }}/projects/de11a21"
+footer: '<strong>CAAC, Centro Andaluz de Arte Contemporáneo</strong>&nbsp; 2011&nbsp; <h6>n.0</h6> / <a href="{{ site.baseurl }}/projects/de11a21-n1">n.1</a> /<a href="{{ site.baseurl }}/projects/de11a21-n2">n.2</a><br><strong><em>de 11 to 21.</em></strong> Issue 0. On the position of the spectator in contemporary visual culture<br />Magazine, 112 pages, 19,5x25 cm'
 ---
 <img src="{% include image_path.html %}/11a21-01.jpg">
 <img src="{% include image_path.html %}/11a21-02.jpg">
