--- a/_posts/2018-01-02-meiac-ivan-marino.html
+++ b/_posts/2018-01-02-meiac-ivan-marino.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Iván Marino. Meiac
 image_path: /projects/meiac-ivan-marino
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/projects/meiac-isabel-maria">PLP01</a> / <a href="/projects/meiac-maite-cajaraville">PLP02</a> / <a href="/projects/meiac-manuel-vilches">PLP03</a> / <a href="/projects/meiac-alonso-gil">PLP04</a> / <h6>PLP05</h6> / <a href="/projects/meiac-gustavo-romano">PLP06</a> / <a href="/projects/meiac-joana-pimentel">PLP07</a> / <a href="/projects/meiac-marta-y-publio">PLP08 </a>/ <a href="/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Iván Marino, <em>Los desastres.</em></strong> Catalogue, 130 pages, 15x21 cm. Post Local Projects 05'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="{{ site.baseurl }}/projects/meiac-isabel-maria">PLP01</a> / <a href="{{ site.baseurl }}/projects/meiac-maite-cajaraville">PLP02</a> / <a href="{{ site.baseurl }}/projects/meiac-manuel-vilches">PLP03</a> / <a href="{{ site.baseurl }}/projects/meiac-alonso-gil">PLP04</a> / <h6>PLP05</h6> / <a href="{{ site.baseurl }}/projects/meiac-gustavo-romano">PLP06</a> / <a href="{{ site.baseurl }}/projects/meiac-joana-pimentel">PLP07</a> / <a href="{{ site.baseurl }}/projects/meiac-marta-y-publio">PLP08 </a>/ <a href="{{ site.baseurl }}/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Iván Marino, <em>Los desastres.</em></strong> Catalogue, 130 pages, 15x21 cm. Post Local Projects 05'
 ---
 <img src="{% include image_path.html %}/ivan-marino-plp05_01.jpg">
 <img src="{% include image_path.html %}/ivan-marino-plp05_02.jpg">
