--- a/_posts/2018-01-02-mncars-cine-y-casi-cine.html
+++ b/_posts/2018-01-02-mncars-cine-y-casi-cine.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Cine y casi cine. MNCARS
 image_path: /projects/mncars-cine-y-casi-cine
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/projects/mncars-audiovisuales">Programs</a> <h6>/ Brochures 1,</h6> <a href="/projects/mncars-sesiones-animadas">2,</a> <a href="/projects/mncars-no-performances">3,</a> <a href="/projects/mncars-amor">4,</a> <a href="/projects/mncars-cine-y-casi-2007">5,</a> <a href="/projects/mncars-latinoamerica">6</a><br /><em><strong>Cine y casi cine,</strong></em> 48 pages, 17x24 cm. Anual festival'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="{{ site.baseurl }}/projects/mncars-audiovisuales">Programs</a> <h6>/ Brochures 1,</h6> <a href="{{ site.baseurl }}/projects/mncars-sesiones-animadas">2,</a> <a href="{{ site.baseurl }}/projects/mncars-no-performances">3,</a> <a href="{{ site.baseurl }}/projects/mncars-amor">4,</a> <a href="{{ site.baseurl }}/projects/mncars-cine-y-casi-2007">5,</a> <a href="{{ site.baseurl }}/projects/mncars-latinoamerica">6</a><br /><em><strong>Cine y casi cine,</strong></em> 48 pages, 17x24 cm. Anual festival'
 style: 'body{background-color: #a5a5a5;}'
 ---
 <img src="{% include image_path.html %}/cycc-01.jpg" class="espacio25">
