--- a/_posts/2018-01-02-mncars-no-performances.html
+++ b/_posts/2018-01-02-mncars-no-performances.html
@@ -2,7 +2,7 @@
 layout: post
 title: No lo llames performance. MNCARS
 image_path: /projects/mncars-no-performances
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/projects/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/projects/mncars-cine-y-casi-cine">1,</a><a href="/projects/mncars-sesiones-animadas">2,</a><h6>3,</h6> <a href="/projects/mncars-amor">4,</a> <a href="/projects/mncars-cine-y-casi-2007">5,</a> <a href="/projects/mncars-latinoamerica">6</a><br /><em><strong>No lo llames performance.</strong></em> 2003, 48 pages, 12x17 cm'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="{{ site.baseurl }}/projects/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="{{ site.baseurl }}/projects/mncars-cine-y-casi-cine">1,</a><a href="{{ site.baseurl }}/projects/mncars-sesiones-animadas">2,</a><h6>3,</h6> <a href="{{ site.baseurl }}/projects/mncars-amor">4,</a> <a href="{{ site.baseurl }}/projects/mncars-cine-y-casi-2007">5,</a> <a href="{{ site.baseurl }}/projects/mncars-latinoamerica">6</a><br /><em><strong>No lo llames performance.</strong></em> 2003, 48 pages, 12x17 cm'
 style: '.content img{
 	display: inline;
 }
