--- a/_posts/2018-01-02-museo-marco-launch.html
+++ b/_posts/2018-01-02-museo-marco-launch.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Museo Marco launch
 image_path: /projects/museo-marco-launch
-footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<a href="/projects/museo-marco">visual identity</a> / <h6>launch</h6> / <a href="/projects/museo-marco-stationary">stationary</a> / <a href="/projects/museo-marco-stand">tradestand</a><br />Diseño de marca'
+footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<a href="{{ site.baseurl }}/projects/museo-marco">visual identity</a> / <h6>launch</h6> / <a href="{{ site.baseurl }}/projects/museo-marco-stationary">stationary</a> / <a href="{{ site.baseurl }}/projects/museo-marco-stand">tradestand</a><br />Diseño de marca'
 ---
 <img src="{% include image_path.html %}/marco-lanzamiento-01.jpg" class="espacio25">
 
