--- a/studio.html
+++ b/studio.html
@@ -59,10 +59,10 @@ Carolina Matos, David Sueiro.</p>
 </div>
 </div>
 
-<img src="/assets/img/studio/estudio.jpg">
-<img src="/assets/img/studio/estudio2.jpg">
-<img src="/assets/img/studio/estudio3.jpg">
-<img src="/assets/img/studio/estudio4.jpg">
-<img src="/assets/img/studio/estudio5.jpg">
-<img src="/assets/img/studio/estudio6.jpg">
-<img src="/assets/img/studio/estudio7.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio2.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio3.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio4.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio5.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio6.jpg">
+<img src="{{ site.baseurl }}/assets/img/studio/estudio7.jpg">
