--- a/_posts/2018-01-02-fecyt-identity.html
+++ b/_posts/2018-01-02-fecyt-identity.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Fecyt visual identity
 image_path: /projects/fecyt-identity
-footer: '<strong>FECYT, Spanish Foundation for Science and Technology</strong> &nbsp;2005 &nbsp;<h6>Visual identity</h6> / <a href="/projects/fecyt-publications">Publications</a> / <a href="/projects/fecyt-books">Books</a> <br>Brand, visual identity  publication guidelines'
+footer: '<strong>FECYT, Spanish Foundation for Science and Technology</strong> &nbsp;2005 &nbsp;<h6>Visual identity</h6> / <a href="{{ site.baseurl }}/projects/fecyt-publications">Publications</a> / <a href="{{ site.baseurl }}/projects/fecyt-books">Books</a> <br>Brand, visual identity  publication guidelines'
 ---
 <img src="{% include image_path.html %}/fecyt-01.jpg">
 <img src="{% include image_path.html %}/fecyt-02.jpg">
