--- a/_posts/2018-01-02-fecyt-publications.html
+++ b/_posts/2018-01-02-fecyt-publications.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Fecyt publications
 image_path: /projects/fecyt-publications
-footer: '<strong>FECYT, Spanish Foundation for Science and Technology</strong> &nbsp;2005 &nbsp;<a href="/projects/fecyt-identity">Visual Identity</a> / <h6>Publications</h6> / <a href="/projects/fecyt-books">Books</a> <br>Anual Reports, Cientific Reports, Publications'
+footer: '<strong>FECYT, Spanish Foundation for Science and Technology</strong> &nbsp;2005 &nbsp;<a href="{{ site.baseurl }}/projects/fecyt-identity">Visual Identity</a> / <h6>Publications</h6> / <a href="{{ site.baseurl }}/projects/fecyt-books">Books</a> <br>Anual Reports, Cientific Reports, Publications'
 ---
 <img src="{% include image_path.html %}/fecyt-06.jpg">
 <img src="{% include image_path.html %}/fecyt-07.jpg">
