--- a/_posts/2018-01-02-meiac-joana-pimentel.html
+++ b/_posts/2018-01-02-meiac-joana-pimentel.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Joana Pimentel. Meiac
 image_path: /projects/meiac-joana-pimentel
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2008&nbsp; <a href="/projects/meiac-isabel-maria">PLP01</a> / <a href="/projects/meiac-maite-cajaraville">PLP02</a> / <a href="/projects/meiac-manuel-vilches">PLP03</a> / <a href="/projects/meiac-alonso-gil">PLP04</a> / <a href="/projects/meiac-ivan-marino">PLP05</a> / <a href="/projects/meiac-gustavo-romano">PLP06</a> / <h6>PLP07</h6> / <a href="/projects/meiac-marta-y-publio">PLP08 </a>/ <a href="/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Joana Pimentel, <em>En circunstancias normales.</em></strong> Catalogue, 104 pages, 15x21 cm. Post Local Projects 07'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2008&nbsp; <a href="{{ site.baseurl }}/projects/meiac-isabel-maria">PLP01</a> / <a href="{{ site.baseurl }}/projects/meiac-maite-cajaraville">PLP02</a> / <a href="{{ site.baseurl }}/projects/meiac-manuel-vilches">PLP03</a> / <a href="{{ site.baseurl }}/projects/meiac-alonso-gil">PLP04</a> / <a href="{{ site.baseurl }}/projects/meiac-ivan-marino">PLP05</a> / <a href="{{ site.baseurl }}/projects/meiac-gustavo-romano">PLP06</a> / <h6>PLP07</h6> / <a href="{{ site.baseurl }}/projects/meiac-marta-y-publio">PLP08 </a>/ <a href="{{ site.baseurl }}/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Joana Pimentel, <em>En circunstancias normales.</em></strong> Catalogue, 104 pages, 15x21 cm. Post Local Projects 07'
 ---
 <img src="{% include image_path.html %}/joana-pimentel-plp07-01.jpg">
 <img src="{% include image_path.html %}/joana-pimentel-plp07-02.jpg">
