--- a/_posts/2018-01-02-meiac-marta-y-publio.html
+++ b/_posts/2018-01-02-meiac-marta-y-publio.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Marta y Publio. Meiac
 image_path: /projects/meiac-marta-y-publio
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2008&nbsp; <a href="/projects/meiac-isabel-maria">PLP01</a> / <a href="/projects/meiac-maite-cajaraville">PLP02</a> / <a href="/projects/meiac-manuel-vilches">PLP03</a> / <a href="/projects/meiac-alonso-gil">PLP04</a> / <a href="/projects/meiac-ivan-marino">PLP05</a> / <a href="/projects/meiac-gustavo-romano">PLP06</a> / <a href="/projects/meiac-joana-pimentel">PLP07</a> / <h6>PLP08</h6> /<a href="/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Marta y Publio,<em> Más muertas vivas que nunca.</em></strong> Catalogue, 64 pages, 15x21 cm. Post Local Projects 08'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2008&nbsp; <a href="{{ site.baseurl }}/projects/meiac-isabel-maria">PLP01</a> / <a href="{{ site.baseurl }}/projects/meiac-maite-cajaraville">PLP02</a> / <a href="{{ site.baseurl }}/projects/meiac-manuel-vilches">PLP03</a> / <a href="{{ site.baseurl }}/projects/meiac-alonso-gil">PLP04</a> / <a href="{{ site.baseurl }}/projects/meiac-ivan-marino">PLP05</a> / <a href="{{ site.baseurl }}/projects/meiac-gustavo-romano">PLP06</a> / <a href="{{ site.baseurl }}/projects/meiac-joana-pimentel">PLP07</a> / <h6>PLP08</h6> /<a href="{{ site.baseurl }}/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Marta y Publio,<em> Más muertas vivas que nunca.</em></strong> Catalogue, 64 pages, 15x21 cm. Post Local Projects 08'
 ---
 <img src="{% include image_path.html %}/marta-y-publio-plp08-01.jpg">
 <img src="{% include image_path.html %}/marta-y-publio-plp08-02.jpg">
