--- a/_posts/2018-01-02-mncars-actividades.html
+++ b/_posts/2018-01-02-mncars-actividades.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Actividades. MNCARS
 image_path: /projects/mncars-actividades
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía. Comunication department</strong>&nbsp; 2008-2010&nbsp;   <a href="/projects/mncars-comunicacion">Advertising /</a> <h6>Postcards</h6> /<a href="/projects/mncars-kineteca">Kineteca</a> /<a href="/projects/mncars-alia-syed">Alia Syed</a><br />Public Activities mailing postcards 13x18 cm'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía. Comunication department</strong>&nbsp; 2008-2010&nbsp;   <a href="{{ site.baseurl }}/projects/mncars-comunicacion">Advertising /</a> <h6>Postcards</h6> /<a href="{{ site.baseurl }}/projects/mncars-kineteca">Kineteca</a> /<a href="{{ site.baseurl }}/projects/mncars-alia-syed">Alia Syed</a><br />Public Activities mailing postcards 13x18 cm'
 style: 'body{background-color: #a5a5a5;}'
 ---
 <img src="{% include image_path.html %}/01-zoe-leonard.jpg" class="espacio25">
