link fixes and responsive start

--- a/_posts/2018-01-02-24x7.html
+++ b/_posts/2018-01-02-24x7.html
@@ -1,7 +1,7 @@
 ---
 title: 24x7
 layout: post
-image_path: "{{ site.baseurl }}/projects/24x7"
+image_path: "/projects/24x7"
 footer: "<strong>CentroCentro, Ayuntamiento de Madrid</strong> 2017<br /><em><strong>24/7.
   Conectados</strong></em><br />Exhibition and graphic design"
 style: 'body{background-color: #a5a5a5;}'
