--- a/_posts/2018-01-02-fecyt-books.html
+++ b/_posts/2018-01-02-fecyt-books.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Fecyt books
 image_path: /projects/fecyt-books
-footer: '<strong>FECYT, Spanish Foundation for Science and Technology</strong> &nbsp;<a href="{{ site.baseurl }}/projects/fecyt-identity">Visual identity</a> / <a href="{{ site.baseurl }}/projects/fecyt-publications">Publications</a> / <h6>Books</h6> <br><em><strong>Reflections of Science and Technology in Spain</strong></em> 2002  2004'
+footer: '<strong>FECYT, Spanish Foundation for Science and Technology</strong> &nbsp;<a href="/elvivero/fecyt-identity">Visual identity</a> / <a href="/elvivero/fecyt-publications">Publications</a> / <h6>Books</h6> <br><em><strong>Reflections of Science and Technology in Spain</strong></em> 2002  2004'
 ---
 <img src="{% include image_path.html %}/fecyt-12.jpg">
 <img src="{% include image_path.html %}/fecyt-13.jpg">
