--- a/_posts/2018-01-02-mncars-latinoamerica.html
+++ b/_posts/2018-01-02-mncars-latinoamerica.html
@@ -2,7 +2,7 @@
 layout: post
 title: Visionarios Latinoamérica. MNCARS
 image_path: /projects/mncars-latinoamerica
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="{{ site.baseurl }}/projects/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="{{ site.baseurl }}/projects/mncars-cine-y-casi-cine">1,</a><a href="{{ site.baseurl }}/projects/mncars-sesiones-animadas">2,</a><a href="{{ site.baseurl }}/projects/mncars-no-performances">3,</a><a href="{{ site.baseurl }}/projects/mncars-amor">4,</a><a href="{{ site.baseurl }}/projects/mncars-cine-y-casi-2007">5,</a><h6>6</h6><br /><em><strong>Visionarios. Audiovisual en Latinoamérica.</strong></em> 2009, 48 pages, 12x17 cm'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2000-2010&nbsp;   <a href="/elvivero/mncars-audiovisuales">Programs</a><h6>/ Brochures</h6> <a href="/elvivero/mncars-cine-y-casi-cine">1,</a><a href="/elvivero/mncars-sesiones-animadas">2,</a><a href="/elvivero/mncars-no-performances">3,</a><a href="/elvivero/mncars-amor">4,</a><a href="/elvivero/mncars-cine-y-casi-2007">5,</a><h6>6</h6><br /><em><strong>Visionarios. Audiovisual en Latinoamérica.</strong></em> 2009, 48 pages, 12x17 cm'
 style: '.content img{
 	display: inline;
 }
