--- a/_posts/2018-01-02-museo-marco-stand.html
+++ b/_posts/2018-01-02-museo-marco-stand.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Museo Marco stand
 image_path: /projects/museo-marco-stand
-footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<a href="{{ site.baseurl }}/projects/museo-marco">visual identity</a> / <a href="{{ site.baseurl }}/projects/museo-marco-launch">launch</a> / <a href="{{ site.baseurl }}/projects/museo-marco-stationary">stationary</a> / <h6>tradestand</h6><br />Design of the tradestand for the presentation of the Museum at Arco Contemporary Art Fair '
+footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<a href="/elvivero/museo-marco">visual identity</a> / <a href="/elvivero/museo-marco-launch">launch</a> / <a href="/elvivero/museo-marco-stationary">stationary</a> / <h6>tradestand</h6><br />Design of the tradestand for the presentation of the Museum at Arco Contemporary Art Fair '
 ---
 <img src="{% include image_path.html %}/museo-marco-stand-01.jpg">
 <img src="{% include image_path.html %}/museo-marco-stand-02.jpg">
