--- a/_posts/2018-01-02-museo-marco-stationary.html
+++ b/_posts/2018-01-02-museo-marco-stationary.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Museo Marco stationary
 image_path: /projects/museo-marco-stationary
-footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<a href="{{ site.baseurl }}/projects/museo-marco">visual identity</a> / <a href="{{ site.baseurl }}/projects/museo-marco-launch">launch</a> / <h6>stationary</h6> / <a href="{{ site.baseurl }}/projects/museo-marco-stand">tradestand</a><br>Stationary
+footer: '<strong>Marco, Museo de Arte contemporáneo de Vigo</strong>&nbsp; 2003&nbsp;<a href="/elvivero/museo-marco">visual identity</a> / <a href="/elvivero/museo-marco-launch">launch</a> / <h6>stationary</h6> / <a href="/elvivero/museo-marco-stand">tradestand</a><br>Stationary
 '
 ---
 <img src="{% include image_path.html %}/museo-marco-pap-01.jpg">
