--- a/_posts/2018-01-02-de11a21-n2.html
+++ b/_posts/2018-01-02-de11a21-n2.html
@@ -2,7 +2,7 @@
 layout: post
 title: de 11 a 21, n.2. CAAC
 image_path: /projects/de11a21-n2
-footer: '<strong>CAAC, Centro Andaluz de Arte Contemporáneo</strong>&nbsp; 2011&nbsp; <a href="{{ site.baseurl }}/projects/de11a21">n.0</a> /<a href="{{ site.baseurl }}/projects/de11a21-n1">n.1</a> /<h6>n.2</h6><br><strong><em>de 11 a 21.</em></strong> 	Issue 2, Song as a Force of Social Transformation<br />Magazine, 112 pages, 19,5x25 cm'
+footer: '<strong>CAAC, Centro Andaluz de Arte Contemporáneo</strong>&nbsp; 2011&nbsp; <a href="/elvivero/de11a21">n.0</a> /<a href="/elvivero/de11a21-n1">n.1</a> /<h6>n.2</h6><br><strong><em>de 11 a 21.</em></strong> 	Issue 2, Song as a Force of Social Transformation<br />Magazine, 112 pages, 19,5x25 cm'
 style: 'x'
 ---
 <img src="{% include image_path.html %}/11a21-n2-01.jpg">
