--- a/_posts/2018-01-02-meiac-alonso-gil.html
+++ b/_posts/2018-01-02-meiac-alonso-gil.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Alonso Gil. Meiac
 image_path: /projects/meiac-alonso-gil
-footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="{{ site.baseurl }}/projects/meiac-isabel-maria">PLP01</a> / <a href="{{ site.baseurl }}/projects/meiac-maite-cajaraville">PLP02</a> / <a href="{{ site.baseurl }}/projects/meiac-manuel-vilches">PLP03</a> / <h6>PLP04</h6> / <a href="{{ site.baseurl }}/projects/meiac-ivan-marino">PLP05</a> / <a href="{{ site.baseurl }}/projects/meiac-gustavo-romano">PLP06</a> / <a href="{{ site.baseurl }}/projects/meiac-joana-pimentel">PLP07</a> / <a href="{{ site.baseurl }}/projects/meiac-marta-y-publio">PLP08 </a>/ <a href="{{ site.baseurl }}/projects/meiac-marta-de-menezes">PLP09</a><br /><strong>Alonso Gil, <em>La celda grande.</em></strong> Catalogue, 176 pages, 15x21 cm. Post Local Projects 04'
+footer: '<strong>MEIAC, Museo Extremeño e iberoamericano de Arte Contemporáneo</strong>&nbsp; 2007&nbsp; <a href="/elvivero/meiac-isabel-maria">PLP01</a> / <a href="/elvivero/meiac-maite-cajaraville">PLP02</a> / <a href="/elvivero/meiac-manuel-vilches">PLP03</a> / <h6>PLP04</h6> / <a href="/elvivero/meiac-ivan-marino">PLP05</a> / <a href="/elvivero/meiac-gustavo-romano">PLP06</a> / <a href="/elvivero/meiac-joana-pimentel">PLP07</a> / <a href="/elvivero/meiac-marta-y-publio">PLP08 </a>/ <a href="/elvivero/meiac-marta-de-menezes">PLP09</a><br /><strong>Alonso Gil, <em>La celda grande.</em></strong> Catalogue, 176 pages, 15x21 cm. Post Local Projects 04'
 ---
 <img src="{% include image_path.html %}/alonso-gil-plp04_01.jpg">
 <img src="{% include image_path.html %}/alonso-gil-plp04_02.jpg">
