--- a/_posts/2018-01-02-mucho-gusto-madrid.html
+++ b/_posts/2018-01-02-mucho-gusto-madrid.html
@@ -2,7 +2,7 @@
 layout: post
 title: Mucho gusto Madrid
 image_path: /projects/mucho-gusto-madrid
-footer: '<p><strong>Madrid</strong>, 2016. <a href="{{ site.baseurl }}/assets/files/Mucho%20gusto%20Madrid.pdf" target="_blank">(Project statement pdf-spanish)</a><br /><em>Mucho gusto Madrid</em>, Winner of international competition for the City of Madrid. <br />Prototipe in progress'
+footer: '<p><strong>Madrid</strong>, 2016. <a href="/elvivero/assets/files/Mucho%20gusto%20Madrid.pdf" target="_blank">(Project statement pdf-spanish)</a><br /><em>Mucho gusto Madrid</em>, Winner of international competition for the City of Madrid. <br />Prototipe in progress'
 style: 'x'
 ---
 <iframe src="https://player.vimeo.com/video/179636509?autoplay=1[content]loop=1[content]title=0[content]byline=0[content]portrait=0" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
