--- a/_posts/2018-01-02-webs.html
+++ b/_posts/2018-01-02-webs.html
@@ -2,7 +2,7 @@
 layout: post
 title: Selected Web Pages
 image_path: /projects/webs
-footer: '<strong>Selected Web Pages</strong><br><a href="http://architectusomnibus.org/" target="new">Architectus Omnibus, 2014</a>     <a href="http://elvivero.es/new/proyectos/freshlatino2" target="new">Freshlatino 02, 2014</a>     <a href="http://rabinovich.ch" target="new">Rabinovich Architekten, 2013</a>      <a href="http://martacerveragallery.com/" target="new">Galería Marta Cervera, 2013</a>     <a href="http://buendiashop.com/" target="new">Buen Día Shop, 2013</a>   <br><a href="http://elianaperinat.com/" target="new">Eliana Perinat, 2010</a>      Representación Española en la Bienal de arte de Venecia, 2007     Hasta fin de existencias, 2005'
+footer: '<strong>Selected Web Pages</strong><br><a href="http://architectusomnibus.org/" target="new">Architectus Omnibus, 2014</a>     <a href="http:/elvivero.es/new/proyectos/freshlatino2" target="new">Freshlatino 02, 2014</a>     <a href="http://rabinovich.ch" target="new">Rabinovich Architekten, 2013</a>      <a href="http://martacerveragallery.com/" target="new">Galería Marta Cervera, 2013</a>     <a href="http://buendiashop.com/" target="new">Buen Día Shop, 2013</a>   <br><a href="http://elianaperinat.com/" target="new">Eliana Perinat, 2010</a>      Representación Española en la Bienal de arte de Venecia, 2007     Hasta fin de existencias, 2005'
 style: '
 body{background-color: #a5a5a5;}
 '
