--- a/estudio.html
+++ b/estudio.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Studio
-footer: '<a href="/elvivero/estudio">Leer en castellano.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a>'
+footer: '<a href="/elvivero/studio">Read in English.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a>'
 style: "img{
 	height: 535px;
 	display: inline
@@ -37,35 +37,34 @@ style: "img{
 ---
 <div class="text">
   <div class="column">
-    <p class="space-after"><b>El vivero</b> design studio began as the partnership between Leandro Lattes and Florencia Grassi in 2004. Based in Madrid, we collaborate with major cultural, art, science and tourism organizations, as well as many other clients in Spain and abroad.</p>
-    <p class="space-after">We like design with a sense of humor that playfully includes everyday references whenever appropriate; design with visual content rigorously thought out to insure its coherence and thereby withstand the test of time.</p>
-    <p>We collaborate closely with our clients to clearly define the objectives, contents and special characteristics of every project. We shepherd each and every phase, from conception to implementation. Our conviction is that projects flourish when carried out with close attention and true dedication.</p>
+    <p class="space-after"><b>El vivero</b>, estudio de diseño fundado en 2004 por Florencia Grassi y Leandro Lattes. Nuestros proyectos destacan en los sectores de cultura, arte, turismo y divulgación científica. En los últimos años trabajamos con clientes en España, Europa, América del sur y del norte.</p>
+    <p class="space-after">Nos gusta el diseño que parte de ideas simples, que perdura en el tiempo porque tiene la dimensión apropiada para su contenido y que tiene humor, al dialogar con referencias cotidianas.</p>
+    <p>Participamos en todas las fases del desarrollo de proyecto. Definimos objetivos, contenidos y formas junto a nuestros clientes. En las soluciones de diseño cuidamos cada detalle y el conjunto.</p>
 		<br>
-		<p>Services:<br>
-			Brand design, Visual identity.<br>
-			Editorial design, Publications, Catalogs, Books, Magazines, Annual reports, Print and Online.<br>
-			Communication, Presentations, Style guides.<br>
-			Web design and Apps.<br>
-			Exhibition Design, Environmental Design, Retail Design, Event Design, Product Design, Signage, Packaging.
+		<p>Áreas de trabajo:<br>
+			Creación de marcas, Identidad visual.<br>
+			Diseño editorial, Publicaciones, Catálogos, Libros, Revistas, Memorias, Elementos impresos y online.<br>
+			Comunicación, Presentaciones, Manuales de estilo.<br>
+			Diseño web, Apps.<br>
+			Diseño expositivo, Stands feriales, Retail, Señalización, Diseño de productos, Packaging.
 		</p>
 	</div>
 	<div class="column">
 		<p><b>Florencia Grassi</b></p>
-		<p>Graphic designer and sociologist with over 20 years experience. Expertise in communication design for artistic and cultural projects. Specializing in visual identity and editorial design.<br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
+		<p>Diseñadora gráfica y sociologa con más de 20 años de experiencia. Especializada en comunicación de proyectos artísticos y culturales, en identidad visual y en diseño de publicaciones. <br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
 		<br>
 		<p><b>Leandro Lattes</b></p>
-		<p>Industrial designer with over 20 years experience. Works at the intersection of brands and environments: including visual identities, brand comunication, print and interactive media, branded environments, exhibition design, retail concepts, signage and wayfinding. <br>
-			Design skills in both 3D and 2D.</p>
-			<p>Author of photography books <i>While Stocks Last</i> Volumes I and II.<br><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
+		<p>Diseñadora gráfica y sociologa con más de 20 años de experiencia. Especializada en comunicación de proyectos artísticos y culturales, en identidad visual y en diseño de publicaciones.</p>
+			<p>Autor de los libros <i></i>Hasta fin de existencias I y II</i>. <br /><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
 			<p class="p4"><br></p>
-			<p><b>Contributors</b></p>
+			<p><b>Colaboradores</b></p>
 			<p>Luis Castro, Axel Kacelnik, Brendan McCormick, <br>
 				Carolina Matos, David Sueiro.
 			</p>
 			<p class="p4"><br></p>
 		</div>
 	<div class="column">
-	<p><b>Selected Clients</b></p>
+	<p><b>Clientes</b> (selección)</p>
 	<p>Museo Amparo, Mexico / Bienal Internacional de Cartagena de Indias, Colombia / Translation House Looren, Zürich / Museum Wiesbaden, Germany / Naemi, National Art Exhibition by the Mentally Ill. Miami / Universidade Federal do Rio de Janeiro / Centro Federico García Lorca, Granada / Museo Nacional Centro de Arte Reina Sofia, Madrid / Caam, Centro Atlántico de Arte Moderno, Canarias / Ivam, Instituto Valenciano de Arte Moderno / Marco, Museo de Arte Contemporáneo de Vigo / Meiac, Museo Extremeño e Iberoamericano de Arte Contemporáneo / Gobierno de Extremadura / Instituto Cervantes / Goethe-Institut Madrid / La noche en blanco, Madrid / Ciudad de las Artes y de las Ciencias de Valencia / Ciudad de la Cultura de Santiago de Compostela / Fecyt, Fundación Española para la Ciencia y la Tecnología / Ministerio de Sanidad y Política Social, España / Ministerio de Cultura, España / Ministerio Asuntos Exteriores y de Cooperación, España / AC&nbsp;E, Acción Cultural Española / AECID, Agencia Española de Cooperación Internacional y Desarrollo / Junta de Andalucía / ARCO Feria de Arte Contemporáneo, Madrid / Fundación José Ortega y Gasset / Avam, Artistas Visuales Asociados de Madrid / Galería Pepe Cobo / Galería Elba Benitez / Jazztel</p>
 	</div>
 </div>
