--- a/_posts/2018-01-02-artur-barrio.html
+++ b/_posts/2018-01-02-artur-barrio.html
@@ -2,7 +2,7 @@
 layout: post
 title: Artur Barrio
 image_path: /projects/artur-barrio
-footer: '<strong>CentroCentro, Palacio de Cibeles de Madrid</strong>&nbsp; 2012<br><strong><em>7 (im-)Pertinentes</em></strong>. Exhibition Visual Identity and graphics'
+footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2017-2018<br><strong><em>Artur Barrio</em></strong>. Exhibition and graphic design '
 style: '.content img{vertical-align:top;}
 '
 ---
@@ -17,4 +17,10 @@ style: '.content img{vertical-align:top;}
 <img src="{% include image_path.html %}/Artur-Barrio-10.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-11.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-12.jpg" class="fix535">
-<img src="{% include image_path.html %}/Artur-Barrio-13.jpg" class="fix535">
+<img src="{% include image_path.html %}/Artur-Barrio-13.jpg" class="fix535 espacio25">
+<img src="{% include image_path.html %}/ABrendering.jpg" class="fix535 espacio25">
+
+
+<iframe src="https://player.vimeo.com/video/282710789?loop=1&title=0&byline=0&portrait=0" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
+
+<iframe src="https://player.vimeo.com/video/282715799?loop=1&title=0&byline=0&portrait=0" width="865" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
