--- a/_posts/2018-01-02-artur-barrio.html
+++ b/_posts/2018-01-02-artur-barrio.html
@@ -6,7 +6,7 @@ footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2017-
 style: '.content img{vertical-align:top;}
 '
 ---
-<img src="{% include image_path.html %}/Artur-Barrio-01.jpg" class="fix535">
+<img src="{% include image_path.html %}/Artur-Barrio-01.jpg" class="">
 <img src="{% include image_path.html %}/Artur-Barrio-02.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-04.jpg" class="fix535">
 <img src="{% include image_path.html %}/Artur-Barrio-05.jpg" class="fix535">
