--- a/_posts/2018-01-02-adres-jaque.html
+++ b/_posts/2018-01-02-adres-jaque.html
@@ -2,7 +2,7 @@
 layout: post
 title: Andres Jaque
 image_path: /projects/andres-jaque
-footer: '<strong>Museo Nacional Centro de Arte Reina Sofía</strong>&nbsp; 2017-2018<br><strong><em>Artur Barrio</em></strong>. Exhibition and graphic design '
+footer: '<strong>Andrés Jaque / Office for Political Innovation</strong>&nbsp; 2017<br><strong><em>Transmaterial Politics</em></strong>. Catalogue and exhibition  graphics '
 style: '.content img{vertical-align:top;}
 '
 ---
