--- a/_posts/2018-01-02-andres-jaque.html
+++ b/_posts/2018-01-02-andres-jaque.html
@@ -2,14 +2,13 @@
 layout: post
 title: Andres Jaque
 image_path: /projects/andres-jaque
-footer: '<strong>Andrés Jaque / Office for Political Innovation</strong>&nbsp; 2017<br><strong><em>Transmaterial Politics</em></strong>. Catalogue and exhibition  graphics '
+footer: '<strong>Andrés Jaque / Office for Political Innovation</strong>&nbsp; 2017<br><strong><em>Transmaterial Politics</em></strong>. Catalogue and exhibition graphics '
 style: '.content img{vertical-align:top;}
 '
 ---
-<img src="{% include image_path.html %}/Fachada Tabacalera.jpg" class="fix535">
-<img src="{% include image_path.html %}/CartelesAJ.gif" class="fix535">
-<img src="{% include image_path.html %}/AJcarteles.gif" class="fix535">
-
 <iframe src="https://player.vimeo.com/video/282813252?loop=1&title=0&byline=0&portrait=0" width="743" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
-
 <iframe src="https://player.vimeo.com/video/282813183?autoplay=1&title=0&byline=0&portrait=0" width="803" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
+
+<img src="{% include image_path.html %}/CartelesAJ.gif" class="fix535">
+<img src="{% include image_path.html %}/AJcarteles.gif" class= "fix535 espacio30">
+<img src="{% include image_path.html %}/Fachada Tabacalera.jpg" class="fix535  espacio30">
