--- a/_posts/2018-01-02-trophy.html
+++ b/_posts/2018-01-02-trophy.html
@@ -6,6 +6,6 @@ footer: '<strong>SGAE / Fundación autor</strong> &nbsp;2004 <br><strong>Trophy 
 style: '
 '
 ---
-<iframe src="https://player.vimeo.com/video/214869518?autoplay=1[content]loop=1[content]title=0[content]byline=0[content]portrait=0" width="535" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
+<iframe src="https://player.vimeo.com/video/214869518?autoplay=1&loop=1&color=020506&title=0&byline=0&portrait=0" width="535" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <img class="fix535 espacio0" src="{% include image_path.html %}/trofeomulti.jpg">
