--- a/_posts/2018-01-02-transutopias.html
+++ b/_posts/2018-01-02-transutopias.html
@@ -9,4 +9,7 @@ style: '.content img{vertical-align:top;}
 
 
 <iframe src="https://player.vimeo.com/video/282827896?loop=1&title=0&byline=0&portrait=0" width="950" height="534" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
-<img src="{% include image_path.html %}/folletotmmm-ok.jpg" class="fix535">
+
+<img src="{% include image_path.html %}/folletotmmm-ok.jpg" class="fix535 espacio30">
+
+<iframe src="https://player.vimeo.com/video/283015185?loop=1&title=0&byline=0&portrait=0" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
