--- a/_posts/2018-01-02-freshlatino2.html
+++ b/_posts/2018-01-02-freshlatino2.html
@@ -9,6 +9,8 @@ body{background-color: #a5a5a5;}
 ---
 <iframe src="//player.vimeo.com/video/113272641?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;autoplay=1[content]amp;loop=1" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
+<iframe src="https://player.vimeo.com/video/113272641?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="950" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 <img class="fix535" src="{% include image_path.html %}/FreshL2-.jpg">
 <img class="fix535" src="{% include image_path.html %}/FL2-2.gif">
 <img class="fix535 espacio30" src="{% include image_path.html %}/FL2-3.png">
@@ -20,7 +22,7 @@ body{background-color: #a5a5a5;}
 <img src="{% include image_path.html %}/FL2-15.jpg">
 <img src="{% include image_path.html %}/FL2-16.jpg" class="espacio30">
 
-<iframe src="//player.vimeo.com/video/104604574?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;loop=1" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+<iframe src="//player.vimeo.com/video/104604574?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;loop=1" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <img class="fix535" src="{% include image_path.html %}/FL2-23.png">
 
@@ -30,9 +32,3 @@ body{background-color: #a5a5a5;}
 <img src="{% include image_path.html %}/FL2-17.jpg">
 <img class="fix535" src="{% include image_path.html %}/FL2-26.jpg">
 <img class="fix535" src="{% include image_path.html %}/FL2-tshirt.png">
-
-
-
-
-
-
