--- a/estudio.html
+++ b/estudio.html
@@ -37,8 +37,8 @@ style: "img{
 ---
 <div class="text">
   <div class="column">
-    <p class="space-after"><b>El vivero</b>, estudio de diseño fundado en 2004 por Florencia Grassi y Leandro Lattes. Nuestros proyectos destacan en los sectores de cultura, arte, turismo y divulgación científica. En los últimos años trabajamos con clientes en España, Europa, América del sur y del norte.</p>
-    <p class="space-after">Nos gusta el diseño que parte de ideas simples, que perdura en el tiempo porque tiene la dimensión apropiada para su contenido y que tiene humor, al dialogar con referencias cotidianas.</p>
+    <p class="space-after"><b>El vivero</b> es un estudio de diseño fundado en 2004 por Florencia Grassi y Leandro Lattes. Nuestros proyectos destacan en los sectores de cultura, arte, turismo y divulgación científica. En los últimos años hemos trabajado con clientes en España, Europa, América del sur y del norte.</p>
+    <p class="space-after">Nos gusta el diseño que parte de ideas simples, que perdura en el tiempo porque tiene la dimensión apropiada para su contenido y que tiene humor al dialogar con referencias cotidianas.</p>
     <p>Participamos en todas las fases del desarrollo de proyecto. Definimos objetivos, contenidos y formas junto a nuestros clientes. En las soluciones de diseño cuidamos cada detalle y el conjunto.</p>
 		<br>
 		<p>Áreas de trabajo:<br>
@@ -51,10 +51,10 @@ style: "img{
 	</div>
 	<div class="column">
 		<p><b>Florencia Grassi</b></p>
-		<p>Diseñadora gráfica y sociologa con más de 20 años de experiencia. Especializada en comunicación de proyectos artísticos y culturales, en identidad visual y en diseño de publicaciones. <br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
+		<p>Diseñadora gráfica y socióloga. Especializada en comunicación de proyectos artísticos y culturales, identidad visual y diseño de publicaciones. <br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
 		<br>
 		<p><b>Leandro Lattes</b></p>
-		<p>Diseñadora gráfica y sociologa con más de 20 años de experiencia. Especializada en comunicación de proyectos artísticos y culturales, en identidad visual y en diseño de publicaciones.</p>
+		<p>Diseñador industrial. Trabaja en el entorno de las marcas y su comunicación desde una perspectiva espacial y de producto. Especializado en diseño 3D y 2D.</p>
 			<p>Autor de los libros <i></i>Hasta fin de existencias I y II</i>. <br /><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
 			<p class="p4"><br></p>
 			<p><b>Colaboradores</b></p>
