--- a/studio.html
+++ b/studio.html
@@ -51,10 +51,10 @@ style: "img{
 	</div>
 	<div class="column">
 		<p><b>Florencia Grassi</b></p>
-		<p>Graphic designer and sociologist with over 20 years experience. Expertise in communication design for artistic and cultural projects. Specializing in visual identity and editorial design.<br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
+		<p>Graphic designer and sociologist. Expertise in communication design for artistic and cultural projects. Specialized in visual identity and editorial design.<br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
 		<br>
 		<p><b>Leandro Lattes</b></p>
-		<p>Industrial designer with over 20 years experience. Works at the intersection of brands and environments: including visual identities, brand comunication, print and interactive media, branded environments, exhibition design, retail concepts, signage and wayfinding. <br>
+		<p>Industrial designer. Works at the intersection of brands and environments: including visual identities, brand comunication, print and interactive media, branded environments, exhibition design, retail concepts, signage and wayfinding. <br>
 			Design skills in both 3D and 2D.</p>
 			<p>Author of photography books <i>While Stocks Last</i> Volumes I and II.<br><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
 			<p class="p4"><br></p>
