--- a/_posts/2018-01-02-transutopias.html
+++ b/_posts/2018-01-02-transutopias.html
@@ -24,7 +24,7 @@ style: '.content img{vertical-align:top;}
 <img src="{% include image_path.html %}/Transutopias26.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias28.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias29.jpg" class="fix535">
-<img src="{% include image_path.html %}/Transutopias30.jpg" class="fix535  espacio30">
+<img src="{% include image_path.html %}/Transutopias30.jpg" class="fix535  espacio">
 
 <iframe src="https://player.vimeo.com/video/283015185?loop=1&title=0&byline=0&portrait=0" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
